--- a/commands/TotalVariationDeconvolution.html
+++ b/commands/TotalVariationDeconvolution.html
@@ -292,7 +292,7 @@ implements <a href="../mitiv/invpb/ReconstructionJob.html" title="interface in m
 </tr>
 <tr class="rowColor">
 <td class="colFirst"><code>void</code></td>
-<td class="colLast"><code><strong><a href="../commands/TotalVariationDeconvolution.html#setWeight(mitiv.array.DoubleArray)">setWeight</a></strong>(<a href="../mitiv/array/DoubleArray.html" title="interface in mitiv.array">DoubleArray</a>&nbsp;W)</code>&nbsp;</td>
+<td class="colLast"><code><strong><a href="../commands/TotalVariationDeconvolution.html#setWeight(double[])">setWeight</a></strong>(double[]&nbsp;W)</code>&nbsp;</td>
 </tr>
 <tr class="altColor">
 <td class="colFirst"><code>void</code></td>
@@ -581,13 +581,13 @@ implements <a href="../mitiv/invpb/ReconstructionJob.html" title="interface in m
 <pre>public&nbsp;void&nbsp;stop()</pre>
 </li>
 </ul>
-<a name="setWeight(mitiv.array.DoubleArray)">
+<a name="setWeight(double[])">
 <!--   -->
 </a>
 <ul class="blockList">
 <li class="blockList">
 <h4>setWeight</h4>
-<pre>public&nbsp;void&nbsp;setWeight(<a href="../mitiv/array/DoubleArray.html" title="interface in mitiv.array">DoubleArray</a>&nbsp;W)</pre>
+<pre>public&nbsp;void&nbsp;setWeight(double[]&nbsp;W)</pre>
 </li>
 </ul>
 <a name="loadData(java.lang.String)">
