--- a/mitiv/deconv/Filter.html
+++ b/mitiv/deconv/Filter.html
@@ -35,7 +35,7 @@
 <div class="subNav">
 <ul class="navList">
 <li><a href="../../mitiv/deconv/DeconvUtils.html" title="class in mitiv.deconv"><span class="strong">PREV CLASS</span></a></li>
-<li><a href="../../mitiv/deconv/WeightedConvolutionCost.html" title="class in mitiv.deconv"><span class="strong">NEXT CLASS</span></a></li>
+<li><a href="../../mitiv/deconv/WeightedConvolutionOperator.html" title="class in mitiv.deconv"><span class="strong">NEXT CLASS</span></a></li>
 </ul>
 <ul class="navList">
 <li><a href="../../index.html?mitiv/deconv/Filter.html" target="_top">FRAMES</a></li>
@@ -399,7 +399,7 @@ extends java.lang.Object</pre>
                     int&nbsp;width,
                     int&nbsp;height)</pre>
 <div class="block">Apply the Wiener filter with quadratic approximation on 1D input</div>
-<dl><dt><span class="strong">Parameters:</span></dt><dd><code>alpha</code> - </dd><dd><code>psfFFT</code> - </dd><dd><code>imageFFT</code> - </dd><dd><code>width</code> - </dd><dd><code>height</code> - </dd>
+<dl><dt><span class="strong">Parameters:</span></dt><dd><code>alpha</code> - <<<<<<< HEAD</dd><dd><code>psfFFT</code> - </dd><dd><code>imageFFT</code> - </dd><dd><code>width</code> - </dd><dd><code>height</code> - =======</dd><dd><code>FFT_PSF</code> - </dd><dd><code>FFTImage</code> - </dd><dd><code>Width</code> - </dd><dd><code>Height</code> - >>>>>>> 51ad26bd7d046d3a58bbf0f307a53bef0ebd8e6e</dd>
 <dt><span class="strong">Returns:</span></dt><dd>An array</dd></dl>
 </li>
 </ul>
@@ -497,7 +497,7 @@ extends java.lang.Object</pre>
 <div class="subNav">
 <ul class="navList">
 <li><a href="../../mitiv/deconv/DeconvUtils.html" title="class in mitiv.deconv"><span class="strong">PREV CLASS</span></a></li>
-<li><a href="../../mitiv/deconv/WeightedConvolutionCost.html" title="class in mitiv.deconv"><span class="strong">NEXT CLASS</span></a></li>
+<li><a href="../../mitiv/deconv/WeightedConvolutionOperator.html" title="class in mitiv.deconv"><span class="strong">NEXT CLASS</span></a></li>
 </ul>
 <ul class="navList">
 <li><a href="../../index.html?mitiv/deconv/Filter.html" target="_top">FRAMES</a></li>
