--- a/mitiv/invpb/ReconstructionSynchronizer.html
+++ b/mitiv/invpb/ReconstructionSynchronizer.html
@@ -171,7 +171,7 @@ extends java.lang.Object</pre>
 </td>
 </tr>
 <tr class="rowColor">
-<td class="colFirst"><code>boolean</code></td>
+<td class="colFirst"><code>void</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/invpb/ReconstructionSynchronizer.html#setParameter(int, double)">setParameter</a></strong>(int&nbsp;i,
             double&nbsp;value)</code>
 <div class="block">Set a given reconstruction parameter.</div>
@@ -298,8 +298,8 @@ extends java.lang.Object</pre>
 <ul class="blockList">
 <li class="blockList">
 <h4>setParameter</h4>
-<pre>public&nbsp;boolean&nbsp;setParameter(int&nbsp;i,
-                   double&nbsp;value)</pre>
+<pre>public&nbsp;void&nbsp;setParameter(int&nbsp;i,
+                double&nbsp;value)</pre>
 <div class="block">Set a given reconstruction parameter.
  
  <p>
@@ -308,8 +308,7 @@ extends java.lang.Object</pre>
  If reconstruction has not yet been started, the parameters will
  be taken into account when the reconstruction is started.
  </p></div>
-<dl><dt><span class="strong">Parameters:</span></dt><dd><code>i</code> - - The index of the parameter to change.</dd><dd><code>value</code> - - The new value of the parameter.</dd>
-<dt><span class="strong">Returns:</span></dt><dd>Whether the parameter has changed.</dd></dl>
+<dl><dt><span class="strong">Parameters:</span></dt><dd><code>i</code> - - The index of the parameter to change.</dd><dd><code>value</code> - - The new value of the parameter.</dd></dl>
 </li>
 </ul>
 <a name="updateParameters(double[], boolean[])">
