--- a/mitiv/linalg/WeightGenerator.html
+++ b/mitiv/linalg/WeightGenerator.html
@@ -133,7 +133,7 @@ extends java.lang.Object</pre>
 </tr>
 <tr class="altColor">
 <td class="colFirst"><code><a href="../../mitiv/array/ShapedArray.html" title="interface in mitiv.array">ShapedArray</a></code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/linalg/WeightGenerator.html#getWeightMap(mitiv.base.Shape)">getWeightMap</a></strong>(<a href="../../mitiv/base/Shape.html" title="class in mitiv.base">Shape</a>&nbsp;outputShape)</code>&nbsp;</td>
+<td class="colLast"><code><strong><a href="../../mitiv/linalg/WeightGenerator.html#getWeightMap()">getWeightMap</a></strong>()</code>&nbsp;</td>
 </tr>
 <tr class="rowColor">
 <td class="colFirst"><code>void</code></td>
@@ -143,23 +143,19 @@ extends java.lang.Object</pre>
 </tr>
 <tr class="altColor">
 <td class="colFirst"><code>void</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/linalg/WeightGenerator.html#setComputedVarianceMap(mitiv.array.ShapedArray)">setComputedVarianceMap</a></strong>(<a href="../../mitiv/array/ShapedArray.html" title="interface in mitiv.array">ShapedArray</a>&nbsp;map)</code>&nbsp;</td>
-</tr>
-<tr class="rowColor">
-<td class="colFirst"><code>void</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/linalg/WeightGenerator.html#setPixelMap(mitiv.array.ShapedArray)">setPixelMap</a></strong>(<a href="../../mitiv/array/ShapedArray.html" title="interface in mitiv.array">ShapedArray</a>&nbsp;map)</code>&nbsp;</td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><code>void</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/linalg/WeightGenerator.html#setSaturation(double)">setSaturation</a></strong>(double&nbsp;saturation)</code>
 <div class="block">In order to be able to detect saturation we have to know a value.</div>
 </td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><code>void</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/linalg/WeightGenerator.html#setVarianceMap(mitiv.array.ShapedArray)">setVarianceMap</a></strong>(<a href="../../mitiv/array/ShapedArray.html" title="interface in mitiv.array">ShapedArray</a>&nbsp;map)</code>&nbsp;</td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><code>void</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/linalg/WeightGenerator.html#setWeightMap(mitiv.array.ShapedArray)">setWeightMap</a></strong>(<a href="../../mitiv/array/ShapedArray.html" title="interface in mitiv.array">ShapedArray</a>&nbsp;map)</code>&nbsp;</td>
 </tr>
@@ -202,13 +198,13 @@ extends java.lang.Object</pre>
 <!--   -->
 </a>
 <h3>Method Detail</h3>
-<a name="getWeightMap(mitiv.base.Shape)">
+<a name="getWeightMap()">
 <!--   -->
 </a>
 <ul class="blockList">
 <li class="blockList">
 <h4>getWeightMap</h4>
-<pre>public&nbsp;<a href="../../mitiv/array/ShapedArray.html" title="interface in mitiv.array">ShapedArray</a>&nbsp;getWeightMap(<a href="../../mitiv/base/Shape.html" title="class in mitiv.base">Shape</a>&nbsp;outputShape)</pre>
+<pre>public&nbsp;<a href="../../mitiv/array/ShapedArray.html" title="interface in mitiv.array">ShapedArray</a>&nbsp;getWeightMap()</pre>
 </li>
 </ul>
 <a name="setSaturation(double)">
@@ -239,15 +235,6 @@ extends java.lang.Object</pre>
 <li class="blockList">
 <h4>setVarianceMap</h4>
 <pre>public&nbsp;void&nbsp;setVarianceMap(<a href="../../mitiv/array/ShapedArray.html" title="interface in mitiv.array">ShapedArray</a>&nbsp;map)</pre>
-</li>
-</ul>
-<a name="setComputedVarianceMap(mitiv.array.ShapedArray)">
-<!--   -->
-</a>
-<ul class="blockList">
-<li class="blockList">
-<h4>setComputedVarianceMap</h4>
-<pre>public&nbsp;void&nbsp;setComputedVarianceMap(<a href="../../mitiv/array/ShapedArray.html" title="interface in mitiv.array">ShapedArray</a>&nbsp;map)</pre>
 </li>
 </ul>
 <a name="setPixelMap(mitiv.array.ShapedArray)">
