--- a/mitiv/microscopy/package-summary.html
+++ b/mitiv/microscopy/package-summary.html
@@ -84,7 +84,7 @@
 <td class="colLast">&nbsp;</td>
 </tr>
 <tr class="altColor">
-<td class="colFirst"><a href="../../mitiv/microscopy/Zernike.html" title="class in mitiv.microscopy">Zernike</a></td>
+<td class="colFirst"><a href="../../mitiv/microscopy/Zernike1D.html" title="class in mitiv.microscopy">Zernike1D</a></td>
 <td class="colLast">
 <div class="block">Compute Zernike polynomials 
 
