--- a/mitiv/deconv/DeconvUtils.html
+++ b/mitiv/deconv/DeconvUtils.html
@@ -328,7 +328,9 @@ extends java.lang.Object</pre>
 </tr>
 <tr class="rowColor">
 <td class="colFirst"><code>void</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/deconv/DeconvUtils.html#PadImageAndPSF(double)">PadImageAndPSF</a></strong>(double&nbsp;coef)</code>&nbsp;</td>
+<td class="colLast"><code><strong><a href="../../mitiv/deconv/DeconvUtils.html#PadImageAndPSF(double)">PadImageAndPSF</a></strong>(double&nbsp;coef)</code>
+<div class="block">Pad image</div>
+</td>
 </tr>
 <tr class="altColor">
 <td class="colFirst"><code>double[]</code></td>
@@ -643,7 +645,7 @@ extends java.lang.Object</pre>
 <li class="blockList">
 <h4>PadImageAndPSF</h4>
 <pre>public&nbsp;void&nbsp;PadImageAndPSF(double&nbsp;coef)</pre>
-<dl><dt><span class="strong">Parameters:</span></dt><dd><code>coef</code> - </dd></dl>
+<div class="block">Pad image</div>
 </li>
 </ul>
 <a name="cloneImageVect()">
