--- a/mitiv/deconv/impl/package-tree.html
+++ b/mitiv/deconv/impl/package-tree.html
@@ -76,42 +76,16 @@
 <ul>
 <li type="circle">mitiv.linalg.shaped.<a href="../../../mitiv/linalg/shaped/ShapedLinearOperator.html" title="class in mitiv.linalg.shaped"><span class="strong">ShapedLinearOperator</span></a> (implements mitiv.base.<a href="../../../mitiv/base/Traits.html" title="interface in mitiv.base">Traits</a>)
 <ul>
-<li type="circle">mitiv.deconv.<a href="../../../mitiv/deconv/Convolution.html" title="class in mitiv.deconv"><span class="strong">Convolution</span></a>
-<ul>
-<li type="circle">mitiv.deconv.impl.<a href="../../../mitiv/deconv/impl/ConvolutionDouble.html" title="class in mitiv.deconv.impl"><span class="strong">ConvolutionDouble</span></a>
+<li type="circle">mitiv.deconv.<a href="../../../mitiv/deconv/WeightedConvolutionOperator.html" title="class in mitiv.deconv"><span class="strong">WeightedConvolutionOperator</span></a>
 <ul>
 <li type="circle">mitiv.deconv.impl.<a href="../../../mitiv/deconv/impl/ConvolutionDouble1D.html" title="class in mitiv.deconv.impl"><span class="strong">ConvolutionDouble1D</span></a></li>
 <li type="circle">mitiv.deconv.impl.<a href="../../../mitiv/deconv/impl/ConvolutionDouble2D.html" title="class in mitiv.deconv.impl"><span class="strong">ConvolutionDouble2D</span></a></li>
 <li type="circle">mitiv.deconv.impl.<a href="../../../mitiv/deconv/impl/ConvolutionDouble3D.html" title="class in mitiv.deconv.impl"><span class="strong">ConvolutionDouble3D</span></a></li>
-</ul>
-</li>
-<li type="circle">mitiv.deconv.impl.<a href="../../../mitiv/deconv/impl/ConvolutionFloat.html" title="class in mitiv.deconv.impl"><span class="strong">ConvolutionFloat</span></a>
-<ul>
 <li type="circle">mitiv.deconv.impl.<a href="../../../mitiv/deconv/impl/ConvolutionFloat1D.html" title="class in mitiv.deconv.impl"><span class="strong">ConvolutionFloat1D</span></a></li>
 <li type="circle">mitiv.deconv.impl.<a href="../../../mitiv/deconv/impl/ConvolutionFloat2D.html" title="class in mitiv.deconv.impl"><span class="strong">ConvolutionFloat2D</span></a></li>
 <li type="circle">mitiv.deconv.impl.<a href="../../../mitiv/deconv/impl/ConvolutionFloat3D.html" title="class in mitiv.deconv.impl"><span class="strong">ConvolutionFloat3D</span></a></li>
 </ul>
 </li>
-</ul>
-</li>
-</ul>
-</li>
-</ul>
-</li>
-<li type="circle">mitiv.deconv.<a href="../../../mitiv/deconv/WeightedConvolutionCost.html" title="class in mitiv.deconv"><span class="strong">WeightedConvolutionCost</span></a> (implements mitiv.cost.<a href="../../../mitiv/cost/DifferentiableCostFunction.html" title="interface in mitiv.cost">DifferentiableCostFunction</a>)
-<ul>
-<li type="circle">mitiv.deconv.impl.<a href="../../../mitiv/deconv/impl/WeightedConvolutionDouble.html" title="class in mitiv.deconv.impl"><span class="strong">WeightedConvolutionDouble</span></a>
-<ul>
-<li type="circle">mitiv.deconv.impl.<a href="../../../mitiv/deconv/impl/WeightedConvolutionDouble1D.html" title="class in mitiv.deconv.impl"><span class="strong">WeightedConvolutionDouble1D</span></a></li>
-<li type="circle">mitiv.deconv.impl.<a href="../../../mitiv/deconv/impl/WeightedConvolutionDouble2D.html" title="class in mitiv.deconv.impl"><span class="strong">WeightedConvolutionDouble2D</span></a></li>
-<li type="circle">mitiv.deconv.impl.<a href="../../../mitiv/deconv/impl/WeightedConvolutionDouble3D.html" title="class in mitiv.deconv.impl"><span class="strong">WeightedConvolutionDouble3D</span></a></li>
-</ul>
-</li>
-<li type="circle">mitiv.deconv.impl.<a href="../../../mitiv/deconv/impl/WeightedConvolutionFloat.html" title="class in mitiv.deconv.impl"><span class="strong">WeightedConvolutionFloat</span></a>
-<ul>
-<li type="circle">mitiv.deconv.impl.<a href="../../../mitiv/deconv/impl/WeightedConvolutionFloat1D.html" title="class in mitiv.deconv.impl"><span class="strong">WeightedConvolutionFloat1D</span></a></li>
-<li type="circle">mitiv.deconv.impl.<a href="../../../mitiv/deconv/impl/WeightedConvolutionFloat2D.html" title="class in mitiv.deconv.impl"><span class="strong">WeightedConvolutionFloat2D</span></a></li>
-<li type="circle">mitiv.deconv.impl.<a href="../../../mitiv/deconv/impl/WeightedConvolutionFloat3D.html" title="class in mitiv.deconv.impl"><span class="strong">WeightedConvolutionFloat3D</span></a></li>
 </ul>
 </li>
 </ul>
