--- a/mitiv/microscopy/PSF_Estimation.html
+++ b/mitiv/microscopy/PSF_Estimation.html
@@ -35,7 +35,7 @@
 <div class="subNav">
 <ul class="navList">
 <li><a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html" title="class in mitiv.microscopy"><span class="strong">PREV CLASS</span></a></li>
-<li><a href="../../mitiv/microscopy/Zernike.html" title="class in mitiv.microscopy"><span class="strong">NEXT CLASS</span></a></li>
+<li><a href="../../mitiv/microscopy/Zernike1D.html" title="class in mitiv.microscopy"><span class="strong">NEXT CLASS</span></a></li>
 </ul>
 <ul class="navList">
 <li><a href="../../index.html?mitiv/microscopy/PSF_Estimation.html" target="_top">FRAMES</a></li>
@@ -60,13 +60,13 @@
 <ul class="subNavList">
 <li>SUMMARY:&nbsp;</li>
 <li>NESTED&nbsp;|&nbsp;</li>
-<li><a href="#field_summary">FIELD</a>&nbsp;|&nbsp;</li>
+<li>FIELD&nbsp;|&nbsp;</li>
 <li><a href="#constructor_summary">CONSTR</a>&nbsp;|&nbsp;</li>
 <li><a href="#method_summary">METHOD</a></li>
 </ul>
 <ul class="subNavList">
 <li>DETAIL:&nbsp;</li>
-<li><a href="#field_detail">FIELD</a>&nbsp;|&nbsp;</li>
+<li>FIELD&nbsp;|&nbsp;</li>
 <li><a href="#constructor_detail">CONSTR</a>&nbsp;|&nbsp;</li>
 <li><a href="#method_detail">METHOD</a></li>
 </ul>
@@ -107,33 +107,6 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 <div class="summary">
 <ul class="blockList">
 <li class="blockList">
-<!-- =========== FIELD SUMMARY =========== -->
-<ul class="blockList">
-<li class="blockList"><a name="field_summary">
-<!--   -->
-</a>
-<h3>Field Summary</h3>
-<table class="overviewSummary" border="0" cellpadding="3" cellspacing="0" summary="Field Summary table, listing fields, and an explanation">
-<caption><span>Fields</span><span class="tabEnd">&nbsp;</span></caption>
-<tr>
-<th class="colFirst" scope="col">Modifier and Type</th>
-<th class="colLast" scope="col">Field and Description</th>
-</tr>
-<tr class="altColor">
-<td class="colFirst"><code>static int</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#ALPHA">ALPHA</a></strong></code>&nbsp;</td>
-</tr>
-<tr class="rowColor">
-<td class="colFirst"><code>static int</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#BETA">BETA</a></strong></code>&nbsp;</td>
-</tr>
-<tr class="altColor">
-<td class="colFirst"><code>static int</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#DEFOCUS">DEFOCUS</a></strong></code>&nbsp;</td>
-</tr>
-</table>
-</li>
-</ul>
 <!-- ======== CONSTRUCTOR SUMMARY ======== -->
 <ul class="blockList">
 <li class="blockList"><a name="constructor_summary">
@@ -173,106 +146,98 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 </tr>
 <tr class="altColor">
 <td class="colFirst"><code>void</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#enablePositivity(java.lang.Boolean)">enablePositivity</a></strong>(java.lang.Boolean&nbsp;positivity)</code>&nbsp;</td>
-</tr>
-<tr class="rowColor">
-<td class="colFirst"><code>void</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#fitPSF(mitiv.linalg.shaped.DoubleShapedVector, int)">fitPSF</a></strong>(<a href="../../mitiv/linalg/shaped/DoubleShapedVector.html" title="class in mitiv.linalg.shaped">DoubleShapedVector</a>&nbsp;x,
       int&nbsp;flag)</code>&nbsp;</td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><code>double</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#getCost()">getCost</a></strong>()</code>
 <div class="block">Get the current value of the objective function.</div>
 </td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><code><a href="../../mitiv/array/DoubleArray.html" title="interface in mitiv.array">DoubleArray</a></code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#getData()">getData</a></strong>()</code>&nbsp;</td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><code>int</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#getEvaluations()">getEvaluations</a></strong>()</code>
 <div class="block">Get the current number of function evaluations.</div>
 </td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><code>double</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#getGradientNorm1()">getGradientNorm1</a></strong>()</code>
 <div class="block">Get the L1 norm of the current gradient of the objective function.</div>
 </td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><code>double</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#getGradientNorm2()">getGradientNorm2</a></strong>()</code>
 <div class="block">Get the Euclidean (L2) norm of the current gradient of the objective function.</div>
 </td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><code>double</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#getGradientNormInf()">getGradientNormInf</a></strong>()</code>
 <div class="block">Get the infinite norm of the current gradient of the objective function.</div>
 </td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><code>int</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#getIterations()">getIterations</a></strong>()</code>
 <div class="block">Get the current number of iterations.</div>
 </td>
 </tr>
-<tr class="rowColor">
-<td class="colFirst"><code><a href="../../mitiv/array/ShapedArray.html" title="interface in mitiv.array">ShapedArray</a></code></td>
+<tr class="altColor">
+<td class="colFirst"><code><a href="../../mitiv/array/DoubleArray.html" title="interface in mitiv.array">DoubleArray</a></code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#getPsf()">getPsf</a></strong>()</code>&nbsp;</td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><code>double</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#getRelativeTolerance()">getRelativeTolerance</a></strong>()</code>&nbsp;</td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><code><a href="../../mitiv/array/DoubleArray.html" title="interface in mitiv.array">DoubleArray</a></code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#getResult()">getResult</a></strong>()</code>
 <div class="block">Get the current reconstruction result.</div>
 </td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><code>java.lang.String</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#getSynchronizedParameterName(int)">getSynchronizedParameterName</a></strong>(int&nbsp;i)</code>&nbsp;</td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><code><a href="../../mitiv/invpb/ReconstructionSynchronizer.html" title="class in mitiv.invpb">ReconstructionSynchronizer</a></code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#getSynchronizer()">getSynchronizer</a></strong>()</code>&nbsp;</td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><code><a href="../../mitiv/invpb/ReconstructionViewer.html" title="interface in mitiv.invpb">ReconstructionViewer</a></code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#getViewer()">getViewer</a></strong>()</code>&nbsp;</td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><code>void</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setAbsoluteTolerance(double)">setAbsoluteTolerance</a></strong>(double&nbsp;value)</code>&nbsp;</td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><code>void</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setData(mitiv.array.DoubleArray)">setData</a></strong>(<a href="../../mitiv/array/DoubleArray.html" title="interface in mitiv.array">DoubleArray</a>&nbsp;data)</code>&nbsp;</td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><code>void</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setDebugMode(boolean)">setDebugMode</a></strong>(boolean&nbsp;value)</code>&nbsp;</td>
 </tr>
-<tr class="altColor">
+<tr class="rowColor">
 <td class="colFirst"><code>void</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setLimitedMemorySize(int)">setLimitedMemorySize</a></strong>(int&nbsp;value)</code>&nbsp;</td>
 </tr>
-<tr class="rowColor">
+<tr class="altColor">
 <td class="colFirst"><code>void</code></td>
 <td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setLowerBound(double)">setLowerBound</a></strong>(double&nbsp;value)</code>&nbsp;</td>
 </tr>
-<tr class="altColor">
-<td class="colFirst"><code>void</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setMaximumIterations(int)">setMaximumIterations</a></strong>(int&nbsp;value)</code>&nbsp;</td>
-</tr>
 <tr class="rowColor">
 <td class="colFirst"><code>void</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setObj(mitiv.array.ShapedArray)">setObj</a></strong>(<a href="../../mitiv/array/ShapedArray.html" title="interface in mitiv.array">ShapedArray</a>&nbsp;obj)</code>&nbsp;</td>
+<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setMaximumIterations(int)">setMaximumIterations</a></strong>(int&nbsp;value)</code>&nbsp;</td>
 </tr>
 <tr class="altColor">
 <td class="colFirst"><code>void</code></td>
@@ -304,15 +269,15 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 </tr>
 <tr class="rowColor">
 <td class="colFirst"><code>void</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setViewer(mitiv.invpb.ReconstructionViewer)">setViewer</a></strong>(<a href="../../mitiv/invpb/ReconstructionViewer.html" title="interface in mitiv.invpb">ReconstructionViewer</a>&nbsp;rv)</code>&nbsp;</td>
+<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setVerboseMode(boolean)">setVerboseMode</a></strong>(boolean&nbsp;value)</code>&nbsp;</td>
 </tr>
 <tr class="altColor">
 <td class="colFirst"><code>void</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setWeight(mitiv.array.DoubleArray)">setWeight</a></strong>(<a href="../../mitiv/array/DoubleArray.html" title="interface in mitiv.array">DoubleArray</a>&nbsp;W)</code>&nbsp;</td>
+<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setViewer(mitiv.invpb.ReconstructionViewer)">setViewer</a></strong>(<a href="../../mitiv/invpb/ReconstructionViewer.html" title="interface in mitiv.invpb">ReconstructionViewer</a>&nbsp;rv)</code>&nbsp;</td>
 </tr>
 <tr class="rowColor">
 <td class="colFirst"><code>void</code></td>
-<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#start()">start</a></strong>()</code>&nbsp;</td>
+<td class="colLast"><code><strong><a href="../../mitiv/microscopy/PSF_Estimation.html#setWeight(double[])">setWeight</a></strong>(double[]&nbsp;W)</code>&nbsp;</td>
 </tr>
 <tr class="altColor">
 <td class="colFirst"><code>void</code></td>
@@ -334,44 +299,6 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 <div class="details">
 <ul class="blockList">
 <li class="blockList">
-<!-- ============ FIELD DETAIL =========== -->
-<ul class="blockList">
-<li class="blockList"><a name="field_detail">
-<!--   -->
-</a>
-<h3>Field Detail</h3>
-<a name="DEFOCUS">
-<!--   -->
-</a>
-<ul class="blockList">
-<li class="blockList">
-<h4>DEFOCUS</h4>
-<pre>public static final&nbsp;int DEFOCUS</pre>
-<dl><dt><span class="strong">See Also:</span></dt><dd><a href="../../constant-values.html#mitiv.microscopy.PSF_Estimation.DEFOCUS">Constant Field Values</a></dd></dl>
-</li>
-</ul>
-<a name="ALPHA">
-<!--   -->
-</a>
-<ul class="blockList">
-<li class="blockList">
-<h4>ALPHA</h4>
-<pre>public static final&nbsp;int ALPHA</pre>
-<dl><dt><span class="strong">See Also:</span></dt><dd><a href="../../constant-values.html#mitiv.microscopy.PSF_Estimation.ALPHA">Constant Field Values</a></dd></dl>
-</li>
-</ul>
-<a name="BETA">
-<!--   -->
-</a>
-<ul class="blockListLast">
-<li class="blockList">
-<h4>BETA</h4>
-<pre>public static final&nbsp;int BETA</pre>
-<dl><dt><span class="strong">See Also:</span></dt><dd><a href="../../constant-values.html#mitiv.microscopy.PSF_Estimation.BETA">Constant Field Values</a></dd></dl>
-</li>
-</ul>
-</li>
-</ul>
 <!-- ========= CONSTRUCTOR DETAIL ======== -->
 <ul class="blockList">
 <li class="blockList"><a name="constructor_detail">
@@ -413,15 +340,6 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 <pre>public&nbsp;void&nbsp;deleteSynchronizer()</pre>
 </li>
 </ul>
-<a name="enablePositivity(java.lang.Boolean)">
-<!--   -->
-</a>
-<ul class="blockList">
-<li class="blockList">
-<h4>enablePositivity</h4>
-<pre>public&nbsp;void&nbsp;enablePositivity(java.lang.Boolean&nbsp;positivity)</pre>
-</li>
-</ul>
 <a name="getSynchronizedParameterName(int)">
 <!--   -->
 </a>
@@ -439,6 +357,15 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 <h4>fitPSF</h4>
 <pre>public&nbsp;void&nbsp;fitPSF(<a href="../../mitiv/linalg/shaped/DoubleShapedVector.html" title="class in mitiv.linalg.shaped">DoubleShapedVector</a>&nbsp;x,
           int&nbsp;flag)</pre>
+</li>
+</ul>
+<a name="setVerboseMode(boolean)">
+<!--   -->
+</a>
+<ul class="blockList">
+<li class="blockList">
+<h4>setVerboseMode</h4>
+<pre>public&nbsp;void&nbsp;setVerboseMode(boolean&nbsp;value)</pre>
 </li>
 </ul>
 <a name="setDebugMode(boolean)">
@@ -544,22 +471,13 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 <pre>public&nbsp;void&nbsp;stop()</pre>
 </li>
 </ul>
-<a name="start()">
-<!--   -->
-</a>
-<ul class="blockList">
-<li class="blockList">
-<h4>start</h4>
-<pre>public&nbsp;void&nbsp;start()</pre>
-</li>
-</ul>
-<a name="setWeight(mitiv.array.DoubleArray)">
+<a name="setWeight(double[])">
 <!--   -->
 </a>
 <ul class="blockList">
 <li class="blockList">
 <h4>setWeight</h4>
-<pre>public&nbsp;void&nbsp;setWeight(<a href="../../mitiv/array/DoubleArray.html" title="interface in mitiv.array">DoubleArray</a>&nbsp;W)</pre>
+<pre>public&nbsp;void&nbsp;setWeight(double[]&nbsp;W)</pre>
 </li>
 </ul>
 <a name="getViewer()">
@@ -622,7 +540,7 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 <ul class="blockList">
 <li class="blockList">
 <h4>getPsf</h4>
-<pre>public&nbsp;<a href="../../mitiv/array/ShapedArray.html" title="interface in mitiv.array">ShapedArray</a>&nbsp;getPsf()</pre>
+<pre>public&nbsp;<a href="../../mitiv/array/DoubleArray.html" title="interface in mitiv.array">DoubleArray</a>&nbsp;getPsf()</pre>
 </li>
 </ul>
 <a name="setPsf(mitiv.array.DoubleArray)">
@@ -736,7 +654,7 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 <a name="getGradientNormInf()">
 <!--   -->
 </a>
-<ul class="blockList">
+<ul class="blockListLast">
 <li class="blockList">
 <h4>getGradientNormInf</h4>
 <pre>public&nbsp;double&nbsp;getGradientNormInf()</pre>
@@ -746,15 +664,6 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 <dt><strong>Specified by:</strong></dt>
 <dd><code><a href="../../mitiv/invpb/ReconstructionJob.html#getGradientNormInf()">getGradientNormInf</a></code>&nbsp;in interface&nbsp;<code><a href="../../mitiv/invpb/ReconstructionJob.html" title="interface in mitiv.invpb">ReconstructionJob</a></code></dd>
 </dl>
-</li>
-</ul>
-<a name="setObj(mitiv.array.ShapedArray)">
-<!--   -->
-</a>
-<ul class="blockListLast">
-<li class="blockList">
-<h4>setObj</h4>
-<pre>public&nbsp;void&nbsp;setObj(<a href="../../mitiv/array/ShapedArray.html" title="interface in mitiv.array">ShapedArray</a>&nbsp;obj)</pre>
 </li>
 </ul>
 </li>
@@ -783,7 +692,7 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 <div class="subNav">
 <ul class="navList">
 <li><a href="../../mitiv/microscopy/MicroscopyModelPSF1D.html" title="class in mitiv.microscopy"><span class="strong">PREV CLASS</span></a></li>
-<li><a href="../../mitiv/microscopy/Zernike.html" title="class in mitiv.microscopy"><span class="strong">NEXT CLASS</span></a></li>
+<li><a href="../../mitiv/microscopy/Zernike1D.html" title="class in mitiv.microscopy"><span class="strong">NEXT CLASS</span></a></li>
 </ul>
 <ul class="navList">
 <li><a href="../../index.html?mitiv/microscopy/PSF_Estimation.html" target="_top">FRAMES</a></li>
@@ -808,13 +717,13 @@ implements <a href="../../mitiv/invpb/ReconstructionJob.html" title="interface i
 <ul class="subNavList">
 <li>SUMMARY:&nbsp;</li>
 <li>NESTED&nbsp;|&nbsp;</li>
-<li><a href="#field_summary">FIELD</a>&nbsp;|&nbsp;</li>
+<li>FIELD&nbsp;|&nbsp;</li>
 <li><a href="#constructor_summary">CONSTR</a>&nbsp;|&nbsp;</li>
 <li><a href="#method_summary">METHOD</a></li>
 </ul>
 <ul class="subNavList">
 <li>DETAIL:&nbsp;</li>
-<li><a href="#field_detail">FIELD</a>&nbsp;|&nbsp;</li>
+<li>FIELD&nbsp;|&nbsp;</li>
 <li><a href="#constructor_detail">CONSTR</a>&nbsp;|&nbsp;</li>
 <li><a href="#method_detail">METHOD</a></li>
 </ul>
