--- a/mitiv/utils/package-summary.html
+++ b/mitiv/utils/package-summary.html
@@ -35,7 +35,7 @@
 <div class="subNav">
 <ul class="navList">
 <li><a href="../../mitiv/tests/package-summary.html">PREV PACKAGE</a></li>
-<li><a href="../../mitiv/utils/reconstruction/package-summary.html">NEXT PACKAGE</a></li>
+<li>NEXT PACKAGE</li>
 </ul>
 <ul class="navList">
 <li><a href="../../index.html?mitiv/utils/package-summary.html" target="_top">FRAMES</a></li>
@@ -149,7 +149,7 @@
 <div class="subNav">
 <ul class="navList">
 <li><a href="../../mitiv/tests/package-summary.html">PREV PACKAGE</a></li>
-<li><a href="../../mitiv/utils/reconstruction/package-summary.html">NEXT PACKAGE</a></li>
+<li>NEXT PACKAGE</li>
 </ul>
 <ul class="navList">
 <li><a href="../../index.html?mitiv/utils/package-summary.html" target="_top">FRAMES</a></li>
