--- a/mitiv/utils/package-tree.html
+++ b/mitiv/utils/package-tree.html
@@ -35,7 +35,7 @@
 <div class="subNav">
 <ul class="navList">
 <li><a href="../../mitiv/tests/package-tree.html">PREV</a></li>
-<li><a href="../../mitiv/utils/reconstruction/package-tree.html">NEXT</a></li>
+<li>NEXT</li>
 </ul>
 <ul class="navList">
 <li><a href="../../index.html?mitiv/utils/package-tree.html" target="_top">FRAMES</a></li>
@@ -120,7 +120,7 @@
 <div class="subNav">
 <ul class="navList">
 <li><a href="../../mitiv/tests/package-tree.html">PREV</a></li>
-<li><a href="../../mitiv/utils/reconstruction/package-tree.html">NEXT</a></li>
+<li>NEXT</li>
 </ul>
 <ul class="navList">
 <li><a href="../../index.html?mitiv/utils/package-tree.html" target="_top">FRAMES</a></li>
